tests/macros/select/extension.rs
fn main() {
    let q = discourse::questions![Select { extension: todo!() }];
}
